--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -870,7 +870,6 @@ allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -1501,6 +1500,7 @@ allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1530,7 +1530,6 @@ allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
-allow 2a12:6fc2:8000::1b1;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
@@ -1854,7 +1853,6 @@ allow 82.153.138.7;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
-allow 82.29.128.145;
 allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
@@ -1915,6 +1913,7 @@ allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
