--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -654,6 +654,7 @@ deny 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3ea:882::1;
+deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
@@ -683,7 +684,6 @@ deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a11:6100:0:1467::;
-deny 2a12:6fc2:8000::1b1;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:223;
 deny 2a12:a800:11:1:124:198:131:253;
