--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -577,7 +577,6 @@ set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.26.115.140;
 set_real_ip_from 193.26.115.212;
-set_real_ip_from 193.26.115.243;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
 set_real_ip_from 193.26.115.82;
@@ -911,6 +910,7 @@ set_real_ip_from 23.129.64.149;
 set_real_ip_from 23.129.64.150;
 set_real_ip_from 23.129.64.151;
 set_real_ip_from 23.129.64.152;
+set_real_ip_from 23.129.64.153;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
@@ -1095,6 +1095,7 @@ set_real_ip_from 2620:18c:0:192::e0:149;
 set_real_ip_from 2620:18c:0:192::e0:150;
 set_real_ip_from 2620:18c:0:192::e0:151;
 set_real_ip_from 2620:18c:0:192::e0:152;
+set_real_ip_from 2620:18c:0:192::e0:153;
 set_real_ip_from 2620:7:6001::101;
 set_real_ip_from 2620:7:6001::102;
 set_real_ip_from 2620:7:6001::103;
@@ -1895,7 +1896,6 @@ set_real_ip_from 91.202.5.104;
 set_real_ip_from 91.202.5.155;
 set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.203.145.116;
-set_real_ip_from 91.206.169.23;
 set_real_ip_from 91.206.169.87;
 set_real_ip_from 91.206.26.26;
 set_real_ip_from 91.208.75.153;
