--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -247,6 +247,7 @@ set_real_ip_from 2620:18c:0:192::e0:149;
 set_real_ip_from 2620:18c:0:192::e0:150;
 set_real_ip_from 2620:18c:0:192::e0:151;
 set_real_ip_from 2620:18c:0:192::e0:152;
+set_real_ip_from 2620:18c:0:192::e0:153;
 set_real_ip_from 2620:7:6001::101;
 set_real_ip_from 2620:7:6001::102;
 set_real_ip_from 2620:7:6001::103;
