--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -43,7 +43,6 @@ allow 104.219.236.100;
 allow 104.244.72.115;
 allow 104.244.72.132;
 allow 104.244.73.136;
-allow 104.244.73.190;
 allow 104.244.73.193;
 allow 104.244.73.43;
 allow 104.244.74.229;
@@ -100,7 +99,6 @@ allow 107.189.7.144;
 allow 107.189.7.168;
 allow 107.189.8.133;
 allow 107.189.8.136;
-allow 107.189.8.181;
 allow 107.189.8.226;
 allow 107.189.8.5;
 allow 107.189.8.56;
@@ -449,7 +447,6 @@ allow 185.241.208.185;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
-allow 185.241.208.24;
 allow 185.241.208.54;
 allow 185.241.208.71;
 allow 185.241.208.81;
@@ -1036,14 +1033,12 @@ allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 allow 2605:6400:30:f3d3:7c3:507c:6f32:c132;
 allow 2605:6400:30:f414:42ce:c612:dab8:1337;
 allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
-allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 allow 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 allow 2605:6400:30:f503::1;
 allow 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
 allow 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 allow 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 allow 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
-allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
 allow 2605:6400:30:f77f:f41c:2bce:7d61:210b;
@@ -1272,6 +1267,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1510,7 +1506,6 @@ allow 2a0e:bfc0:0:14::24a8;
 allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc2:0:2c::1;
-allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
@@ -1664,7 +1659,6 @@ allow 45.138.16.76;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
-allow 45.141.215.133;
 allow 45.141.215.167;
 allow 45.141.215.169;
 allow 45.141.215.17;
@@ -1747,7 +1741,6 @@ allow 45.90.185.118;
 allow 45.90.185.119;
 allow 45.91.250.107;
 allow 45.9.148.50;
-allow 45.9.156.101;
 allow 45.9.168.18;
 allow 45.9.168.192;
 allow 45.9.168.70;
@@ -1777,6 +1770,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1896,7 +1890,6 @@ allow 91.202.5.104;
 allow 91.202.5.155;
 allow 91.203.144.194;
 allow 91.203.145.116;
-allow 91.206.169.87;
 allow 91.206.26.26;
 allow 91.208.75.153;
 allow 91.208.75.156;
