--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -43,6 +43,7 @@ set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
 set_real_ip_from 104.244.73.136;
+set_real_ip_from 104.244.73.190;
 set_real_ip_from 104.244.73.193;
 set_real_ip_from 104.244.73.43;
 set_real_ip_from 104.244.74.229;
@@ -99,6 +100,7 @@ set_real_ip_from 107.189.7.144;
 set_real_ip_from 107.189.7.168;
 set_real_ip_from 107.189.8.133;
 set_real_ip_from 107.189.8.136;
+set_real_ip_from 107.189.8.181;
 set_real_ip_from 107.189.8.226;
 set_real_ip_from 107.189.8.5;
 set_real_ip_from 107.189.8.56;
@@ -231,7 +233,6 @@ set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
-set_real_ip_from 177.149.141.180;
 set_real_ip_from 177.153.51.238;
 set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.162.175.5;
@@ -250,6 +251,7 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
+set_real_ip_from 179.35.10.237;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -1033,12 +1035,14 @@ set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f3d3:7c3:507c:6f32:c132;
 set_real_ip_from 2605:6400:30:f414:42ce:c612:dab8:1337;
 set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
+set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 set_real_ip_from 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 set_real_ip_from 2605:6400:30:f503::1;
 set_real_ip_from 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
 set_real_ip_from 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 set_real_ip_from 2605:6400:30:f57d:916e:73f8:d5e7:675b;
 set_real_ip_from 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
+set_real_ip_from 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
 set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
 set_real_ip_from 2605:6400:30:f77f:f41c:2bce:7d61:210b;
@@ -1815,6 +1819,7 @@ set_real_ip_from 62.72.47.105;
 set_real_ip_from 64.190.76.2;
 set_real_ip_from 64.190.76.3;
 set_real_ip_from 64.190.76.4;
+set_real_ip_from 65.38.121.230;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.182;
