--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -251,7 +251,7 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 179.35.10.237;
+allow 179.35.5.237;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -915,6 +915,7 @@ allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.151.8.8;
+allow 23.155.8.104;
 allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
@@ -973,6 +974,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
@@ -1057,7 +1059,6 @@ allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
-allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:a140:2262:7686::1;
 allow 2605:a141:2261:4410::1;
@@ -1499,6 +1500,8 @@ allow 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
+allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1602,8 +1605,6 @@ allow 2a12:a800:9:1:45:88:186:92;
 allow 2a12:de40:21:1be4::;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:d::d28b;
-allow 3.104.220.172;
-allow 3.104.79.164;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
@@ -1643,6 +1644,7 @@ allow 45.13.225.69;
 allow 45.13.225.78;
 allow 45.133.74.53;
 allow 45.134.225.36;
+allow 45.137.70.158;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.161;
@@ -1684,7 +1686,6 @@ allow 45.154.98.33;
 allow 45.38.20.153;
 allow 45.61.185.172;
 allow 45.61.186.203;
-allow 45.61.187.200;
 allow 45.61.188.15;
 allow 45.66.35.10;
 allow 45.66.35.20;
@@ -1798,8 +1799,6 @@ allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.252.241.124;
-allow 54.253.33.206;
 allow 54.36.101.21;
 allow 54.36.108.162;
 allow 5.45.102.93;
@@ -1910,6 +1909,7 @@ allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
